--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "NODE_ENV=\"production\" babel --optional runtime src --out-dir dist",
     "watch": "babel -w --optional runtime src --out-dir dist",
     "ndu": "ndu --open",
-    "test": "mocha"
+    "test": "mocha --reporter spec --compilers js:babel-core/register --bail"
   },
   "repository": {
     "type": "git",
@@ -36,6 +36,7 @@
     "babel-polyfill": "6.8.0",
     "babel-preset-es2015": "6.6.0",
     "babel-runtime": "6.6.1",
-    "eslint-config-scienceai": "1.1.2"
+    "eslint-config-scienceai": "1.1.2",
+    "xmldom": "0.1.22"
   }
 }
