passing tests for fractions

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/scienceai/omml2mathml",
   "dependencies": {
+    "escape-string-regexp": "1.0.5",
     "get-dom": "1.2.0",
     "marcheur": "0.3.0",
     "xpath": "0.0.23"
