--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "babel-cli": "6.8.0",
     "babel-core": "6.8.0",
+    "babel-plugin-add-module-exports": "0.2.1",
     "babel-polyfill": "6.8.0",
     "babel-preset-es2015": "6.6.0",
     "babel-runtime": "6.6.1",
