--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-preset-es2015": "6.6.0",
     "babel-runtime": "6.6.1",
     "eslint-config-scienceai": "1.1.2",
+    "mocha": "2.4.5",
     "xmldom": "0.1.22"
   }
 }
