--- a/package.json
+++ b/package.json
@@ -29,18 +29,18 @@
   "dependencies": {
     "escape-string-regexp": "1.0.5",
     "get-dom": "9.0.0",
-    "marcheur": "0.3.0",
-    "xpath": "0.0.23"
+    "marcheur": "^0.6.0",
+    "xpath": "0.0.24"
   },
   "devDependencies": {
-    "babel-cli": "6.8.0",
-    "babel-core": "6.8.0",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
     "babel-plugin-add-module-exports": "0.2.1",
-    "babel-polyfill": "6.8.0",
-    "babel-preset-es2015": "6.6.0",
-    "babel-runtime": "6.6.1",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-runtime": "^6.23.0",
     "eslint-config-scienceai": "1.1.2",
-    "mocha": "2.4.5",
-    "xmldom": "0.1.22"
+    "mocha": "^3.4.1",
+    "xmldom": "^0.1.27"
   }
 }
