--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
-    "babel-plugin-add-module-exports": "0.2.1",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-runtime": "^6.23.0",
-    "eslint-config-scienceai": "1.1.2",
+    "eslint-config-scienceai": "^2.6.0",
     "mocha": "^3.4.1",
     "xmldom": "^0.1.27"
   }
