--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "omml2mathml",
   "version": "1.2.4",
   "description": "Small utility to convert from Microsoft's OMML to MathML",
-  "main": "dist/index.js",
+  "main": "index.js",
   "scripts": {
-    "build": "NODE_ENV=\"production\" babel --optional runtime src --out-dir dist",
-    "watch": "babel -w --optional runtime src --out-dir dist",
-    "ndu": "ndu --open",
-    "test": "mocha --reporter spec --compilers js:babel-core/register --bail",
-    "prepublish": "npm run build"
+    "test": "mocha --reporter spec --bail"
+  },
+  "eslintConfig": {
+    "extends": "robin"
   },
   "repository": {
     "type": "git",
@@ -33,13 +32,7 @@
     "xpath": "0.0.24"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-runtime": "^6.23.0",
-    "eslint-config-scienceai": "^2.6.0",
+    "eslint-config-robin": "^4.0.0",
     "mocha": "^3.4.2",
     "xmldom": "^0.1.27"
   }
